documenting the permgen space error and how to resolve it